# UE4CMake

./: .gitignore  CMakeLists.txt  CMakeTarget.cs  CMakeTarget.uplugin  LICENSE  README.md
.github/workflows/: test.yml
Source/: CMakeLists.in  CMakeTarget.Build.cs  module.cpp  module.h
Source/toolchains/: linux_toolchain.in  unix_toolchain.in  windows_toolchain.in
